feat: LookupController
